--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,8 @@ nav
 nav input
 {
 	margin: 0px;
+	padding-left: 10px;
+	border-radius: 30px;
 }
 
 nav div
@@ -110,7 +112,7 @@ nav ul li a
 	color: #000000;
 	border-right-style: solid;
 	border-right-color: #8C2D19;
-	border-right-width: thin;
+	border-right-width: 2px;
 	padding: 0px 13px 0px 8px;
 }
 
@@ -204,9 +206,9 @@ nav ul li:last-child a
 	height: 120px;
 }
 
-.clickable
+.clickable_event
 {
-	height: 220px;
+	height: 200px;
 }
 
 .event-item
@@ -498,6 +500,26 @@ a
 {
 	text-decoration: none;
 	color: #000000;
+}
+
+textarea:focus
+{
+	border-color: #8C2D19;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 1px rgba(0, 0, 0, 0.3);
+}
+
+textarea
+{
+	border-style: solid;
+	border-width: 2px;
+	border-radius: 5px;
+	border-color: #D6D2D0;
+}
+
+input:focus
+{
+	border-color: #8C2D19;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 1px rgba(0, 0, 0, 0.3);
 }
 
 input
