--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,11 @@ nav ul li:last-child a
 	text-shadow: 0px 1px 2px rgba(255, 255, 255, 0.25);
 }
 
+.event-item-list a
+{
+	outline-style: none;
+}
+
 .event-item-list p
 {
 
@@ -219,11 +224,6 @@ nav ul li:last-child a
 	padding: 0px 12px;
 	padding-bottom: 8px;
 	min-height: 280px;
-}
-
-.event-item a
-{
-	outline-style: none;
 }
 
 .event-item h3
